2004-12-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/riff/riff-media.c:
	(gst_riff_create_video_caps_with_data),
	(gst_riff_create_video_template_caps):
	  Add h264.

2004-12-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/audio/Makefile.am:
	  Try to fix buildbot.

2004-12-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/tcp/gstmultifdsink.c:
	  Clean up and uniformize debugging.

2004-12-16  Edward Hervey  <bilboed@bilboed.com>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/mpegstream/gstdvddemux.c: (gst_dvd_demux_class_init),
	(gst_dvd_demux_reset), (gst_dvd_demux_change_state):
	* gst/mpegstream/gstmpegdemux.c: (gst_mpeg_demux_reset),
	(gst_mpeg_demux_change_state):
	  Reset on ready. Fixes 160276.

2004-12-16  Sebastien Cote  <sc5@hermes.usherb.ca>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_pad_link):
	  Fix memleak (#154815).

2004-12-16  James Bowes  <bowes@cs.dal.ca>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/musicbrainz/gsttrm.c: (gst_musicbrainz_class_init),
	(gst_musicbrainz_init), (gst_musicbrainz_chain),
	(gst_musicbrainz_set_property), (gst_musicbrainz_get_property):
	* ext/musicbrainz/gsttrm.h:
	  Add support for using a proxy server when getting a trm id from
	  the MusicBrainz database (#149613).

2004-12-16  Christophe Fergeau  <teuf@gnome.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstdecodebin.c: (new_pad), (close_link):
	* gst/playback/gstplaybasebin.c: (new_decoded_pad):
	  Fix memleaks (#157233).

2004-12-16  Sebastien Cote  <sc5@hermes.usherb.ca>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/resample/resample.c: (gst_resample_close):
	* gst-libs/gst/resample/resample.h:
	* gst/audioscale/gstaudioscale.c:
	  Fix memleak (#159215).
