@@ -1,5 +1,11 @@
 2004-12-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* gst/matroska/matroska-demux.c: (aac_rate_idx), (aac_profile_idx),
+	(gst_matroska_demux_audio_caps):
+	  Some MPEG-AAC hacks, because else it doesn't work...
+
+2004-12-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* gst-libs/gst/riff/riff-media.c:
 	(gst_riff_create_video_caps_with_data),
 	(gst_riff_create_video_template_caps):
